//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package cache_padded_test;

message AtomicOrderState {
  uint32 inner = 1;
  uint32 inner2 = 2;
}

